src/main/java/com/example/armaria/errors/PaginaNaoExistenteException.java
package com.example.armaria.errors;

public class PaginaNaoExistenteException extends RuntimeException {
  public PaginaNaoExistenteException() {
    super("A página solicitada não existe.");
  }
}
